@@ -517,3 +517,9 @@ Sun Nov 23 15:57:55 2003                        Michael Jennings (mej)
 
 Cleanups required by doxygen 1.3.x.
 ----------------------------------------------------------------------
+Wed Nov 26 17:18:20 2003                        Michael Jennings (mej)
+
+Added sysdefs.h so that client programs who don't employ some/all of
+the AST_* m4 macros can still get all the #define's they need for the
+auto* stuff.
+----------------------------------------------------------------------
